# bmadnotion

./: .bmadnotion.yaml  .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
docs/: implementation-plan.md
src/bmadnotion/: __init__.py  cli.py  config.py  db_sync.py  models.py  page_sync.py  project_sync.py  scanner.py  schema.py  store.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_db_sync.py  test_cli_init_status.py  test_cli_page_sync.py  test_config.py  test_db_sync.py  test_models.py  test_page_sync.py  test_project_sync.py  test_scanner.py  test_store.py
